examples/k8s/fullstack-demo/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: fullstack-web:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
